[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "dtale>=3.18.2",
    "groq>=0.31.0",
    "numpy>=2.3.2",
    "openai>=1.99.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "prophet>=1.1.7",
    "psycopg2-binary>=2.9.10",
    "pygwalker>=0.4.9.15",
    "pymysql>=1.1.1",
    "scikit-learn>=1.7.1",
    "sqlalchemy>=2.0.42",
    "streamlit>=1.48.0",
    "sweetviz>=2.3.1",
    "xlsxwriter>=3.2.5",
]
